- Putted some final changes to snippet building service - Provided optimization of some text utilities methods